// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change loading state 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -104,6 +104,7 @@
          testID=\\"mfaCodeInput\\"
          value=\\"Roge\\"
        />
      </View>
    </Flex>
+   <LoadingWheel />
  </RCTSafeAreaView>"
`;

exports[`should change loading state 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -104,7 +104,6 @@
          testID=\\"mfaCodeInput\\"
          value=\\"Roge\\"
        />
      </View>
    </Flex>
-   <LoadingWheel />
  </RCTSafeAreaView>"
`;

exports[`should render correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <Flex
    align="center"
    direction="row"
    justify="between"
  >
    <BackButton
      style={
        Object {
          "marginLeft": 5,
          "marginTop": 25,
        }
      }
    />
    <Button
      buttonTextStyle={
        Object {
          "fontSize": 14,
          "letterSpacing": 2,
        }
      }
      onPress={[MockFunction]}
      style={
        Object {
          "marginRight": 10,
          "marginTop": 25,
        }
      }
      testID="doneButton"
      text="DONE"
      type="transparent"
    />
  </Flex>
  <Flex
    justify="center"
    style={
      Object {
        "backgroundColor": "#007398",
        "flex": 1,
        "paddingHorizontal": 40,
      }
    }
    value={1}
  >
    <Text
      header={true}
      style={
        Object {
          "color": "#52C5DC",
          "fontSize": 36,
          "letterSpacing": 2,
          "lineHeight": 32,
          "paddingVertical": 10,
          "textAlign": "center",
        }
      }
    >
      two-step verification
    </Text>
    <Text
      style={
        Object {
          "color": "#ffffff",
          "fontSize": 16,
          "letterSpacing": 0.25,
          "lineHeight": 24,
          "paddingVertical": 10,
          "textAlign": "center",
        }
      }
    >
      Enter verification code from your authenticator app.
    </Text>
    <View>
      <Text
        style={
          Object {
            "color": "#52C5DC",
            "fontSize": 12,
          }
        }
      >
        Verification Code
      </Text>
      <Input
        autoFocus={true}
        blurOnSubmit={true}
        keyboardType="numeric"
        onChangeText={[MockFunction]}
        onSubmitEditing={[MockFunction]}
        placeholder="Verification Code"
        placeholderTextColor="white"
        returnKeyType="done"
        testID="mfaCodeInput"
        value="Roge"
      />
    </View>
  </Flex>
</RCTSafeAreaView>
`;
